# knowledge-focus

./: CHUNKING_DESIGN.md  GEMINI.md  MULTIVECTOR.md  MULTIVECTOR_PROGRESS.md  PRD.md  README.md  TAGS.md  UNIFY_BRIDGE.md  VERCEL_AI_SDK_INTEGRATION_PROGRESS.md  authorization.md  authorization_refactoring_tasks.md  bundle_extension_refactoring.md  file-monitor-implementation-report.md  file-monitor-summary.md  refactoring_plan.md  refine_define.md  rust_monitor_optimization.md  rust_refactoring_plan.md  screening.md
api/: RESTART_API_SERVER.md  api_cache_optimization.py  api_standalone.sh  backend_tool_caller.py  bridge_events.py  build_pyinstaller.sh  builtin_openai_compat.py  chatsession_api.py  chatsession_mgr.py  chunking_mgr.py  config.py  db_mgr.py  documents_api.py  download-model.sh  download_model_cli.py  fastapi_integration_example.py  file_tagging_mgr.py  lancedb_mgr.py  main.py  memory_mgr.py  mlx_service.py  model_capability_confirm.py  model_config_mgr.py  models_api.py  models_builtin.py  models_mgr.py  multivector_mgr.py  myfiles_api.py  myfiles_mgr.py  myfolders_api.py  myfolders_mgr.py  parsing_mgr.py  pyproject.toml  refine_mgr.py  rules_mgr.py  screening_api.py  screening_mgr.py  search_api.py  search_mgr.py  start_api.py  (+23 more)
api/aarch64-apple-darwin/: fd
api/server_config/postgresql/: run_prod.sh
api/tools/: calculator.py  co_reading.py  datetime_tools.py  file_search.py  time_tools.py  web_search.py
docs/: AGENT_DEV_PLAN.md  BUILTIN_VLM_IMPLEMENTATION_PROGRESS.md  Better-Auth接入建议.md  CO_READING_DEVELOPMENT_PROGRESS.md  IMAGE_COMPRESSION_IMPLEMENTATION.md  MLX_SERVICE_MIGRATION_PROGRESS.md  MLX_SERVICE_MONITOR_IMPLEMENTATION.md  MLX_SERVICE_SEPARATION.md  MLX_SERVICE_TIMEOUT_PROTECTION.md  (+10 more)
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/capabilities/: default.json
tauri-app/src-tauri/icons/: icon.icns
tauri-app/src-tauri/src/: api_startup.rs  commands.rs  event_buffer.rs  file_monitor.rs  file_monitor_debounced.rs  file_monitor_test.rs  file_scanner.rs  lib.rs  permissions.rs  setup_file_monitor.rs  test_file_monitor.rs
(+145 files in other folders)
